tests/baselines/reference/relativeNamesInClassicResolution.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
somefolder/a.ts(1,17): error TS2792: Cannot find module './b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== somefolder/a.ts (1 errors) ====
    import {x} from "./b"
                    ~~~~~
!!! error TS2792: Cannot find module './b'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    
==== b.ts (0 errors) ====
    export let x = 1;